--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="navbar-items">
                 <img class="logo-img" src="assets/solo3.png">
             <li><a href="#" class="nav-items" >Home</a></li>
-            <li><a href="static/files/resume.pdf" class="nav-items" download>Resume</a></li>
+            <li><a href="https://drive.google.com/file/d/1laeexpPElUTHPknmEQmpSMzWFY-V7z6_/view?usp=drive_link" class="nav-items" download>Resume</a></li>
             
         </div>
         </ul>
@@ -39,7 +39,7 @@
 Developer with skills in python, dart, C, MySqL,  and using frameworks such as 
 django and flutter to develop fully functional websites and applications</p>
     <br>
-    <button id="download-btn"><b><a style="text-decoration: none; color: white;" href="static/files/resume.pdf" download> Download Cv</a></b></button>
+    <button id="download-btn"><b><a style="text-decoration: none; color: white;" href="https://drive.google.com/file/d/1laeexpPElUTHPknmEQmpSMzWFY-V7z6_/view?usp=drive_link" download> Download Cv</a></b></button>
      <div class="centered-icon-div">
      <li><a href="https://web.facebook.com/" target="_blank"><img src="assets/fb.png" class="contact-icons"></a></li>
     <li><a href="https://www.instagram.com/" target="_blank"><img src="assets/instagram.png" class="contact-icons"></a></li>
